# Codex_Nightline

./: .env.example  .env.production  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  run-schedger.sh  vite.config.ts
.github/workflows/: release.yml
android/: RELEASE_SIGNING.md  capacitor.settings.gradle  keystore.properties.example
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/java/online/gokulp/schedger/: MainActivity.java
android/app/src/main/res/values/: strings.xml
scripts/: fetch-model.sh
server/: .env.example  README.md  main.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: EventCard.jsx  EventList.jsx  Uploader.jsx
src/hooks/: useEventExtractor.js
src/utils/: exportLogic.js
