[package]
name = "schedger"
version = "0.1.0"
description = "Privacy-first, on-device calendar extraction"
authors = ["GokulP"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
